k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  # 현재 DB 없이 메모리에 저장하므로 1개 사용
  replicas: 1
  selector:
    matchLabels:
      app: board-backend
  template:
    metadata:
      labels:
        app: board-backend
    spec:
      containers:
        - name: backend
          image: 925047940866.dkr.ecr.us-west-2.amazonaws.com/std19-ex8-fastapi:f30c24fe7a62cd2739441ec6ebdf800ca0557039
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: board-backend
  ports:
    - port: 8000
      targetPort: 8000
