k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board-frontend
  template:
    metadata:
      labels:
        app: board-frontend
    spec:
      containers:
        - name: frontend
          image: 925047940866.dkr.ecr.us-west-2.amazonaws.com/std19-ex8-nginx:f30c24fe7a62cd2739441ec6ebdf800ca0557039
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: board-frontend
  ports:
    - port: 80
      targetPort: 80
